# goit-pythonweb-hw-03

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
goit_pythonweb_hw_03/: error.html  index.html  main.py  message.html  read.html  read_jinja_tpl.html
goit_pythonweb_hw_03/storage/: data.json
