[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
